--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Fightin with the Kardashians</title>
+<title>Fighting with the Kardashians</title>
 <link rel="stylesheet" href="css/estilos.css">
 </head>
 <body>
