pruebas boton fight

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <div></div>
     <div id="textoPlayers"></div>
 
+    <button id="fight" onclick="divColorPrimero('fight')"></button>
 
     <div id="players">
         
