--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <!--...BOTON START...-->
 
-    <button class="start" id="botonStart" onclick="botonStart()">START</button>
+    <button class="start" id="botonStart" onclick="botonStart()" disabled>START</button>
     <button class="start" id="botonFight" onclick="">FIGHT</button>
 
     
