errores medio solucionados

--- a/index.html
+++ b/index.html
@@ -35,25 +35,27 @@
 
 <div id="fight">
     <div class="player1">
-        <progress id="life1" max="100" value="70"></progress>
+         <progress id="life1" max="100" value="100"></progress>
         <button class="botonP1" onclick="fight(0)"></button>
 
     </div>
    
     <div class="player2">
-        <progress id="life2" max="100" value="70"></progress>
+        <progress id="life2" max="100" value="100"></progress>
         <button class="botonP2" onclick="fight(1)"></button>
 
     </div>
 
-</div>
+
 
 <!--PANTALLA WINNER-->
-    <div class="winner"></div>
+    <div id="winner">
+        <h4>THE WINNER IS</h4>
+    </div>
 
     
 
-    <script src="js/players.js"></script>
+    
     <script src="js/main.js"></script>
 </body>
 </html>
