--- a/index.html
+++ b/index.html
@@ -17,6 +17,11 @@
 <!--...BOTON FIGHT...
     <button class="fight" id="botonFight" onclick="fight()">FIGHT</button>-->
 
+    <!--PANTALLA WINNER-->
+    <div id="winner">
+        <h2 id="textWin">The winner is </h2>
+    </div>
+
 <!--PANTALLA-->
 
     <div id="players">
@@ -48,11 +53,7 @@
 
 
 
-<!--PANTALLA WINNER-->
-    <div id="winner">
-        <header> <div><a class="letra" href="https://fontmeme.com/fonts/gw-two-font/"><img src="https://fontmeme.com/permalink/201016/204531e919dc613ef5696f809d9821f9.png" alt="gw-two-font" border="0"></a></div></header>
-        <h4 id="textWin"></h4>
-    </div>
+
 
     
 
