--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
     <!--PANTALLA WINNER-->
     <div id="winner">
-        <h2 id="textWin">You're doing amazing sweetie </h2>
+        <h2 id="textWin">You have done amazing </h2>
     </div>
 
 <!--PANTALLA-->
